starting to use templates
